--- a/app/src/main/res/layout/fragment_child_d.xml
+++ b/app/src/main/res/layout/fragment_child_d.xml
@@ -6,7 +6,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:padding="@dimen/half_dynamic_spacing"
-  tools:context=".MainFragment">
+  tools:context=".controller.MainFragment">
 
   <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/content_layout"
