--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
 
   <fragment
     android:id="@+id/main_fragment"
-    android:name="com.example.navdemo.MainFragment"
+    android:name="com.example.navdemo.controller.MainFragment"
     android:label="@string/main_fragment_label"
     tools:layout="@layout/fragment_main"
     >
@@ -31,7 +31,7 @@
 
   <fragment
     android:id="@+id/child_b_fragment"
-    android:name="com.example.navdemo.ChildBFragment"
+    android:name="com.example.navdemo.controller.ChildBFragment"
     android:label="@string/fragment_b_label"
     tools:layout="@layout/fragment_child_b">
 
@@ -47,14 +47,14 @@
 
   <fragment
     android:id="@+id/child_c_fragment"
-    android:name="com.example.navdemo.ChildCFragment"
+    android:name="com.example.navdemo.controller.ChildCFragment"
     android:label="@string/fragment_c_label"
     tools:layout="@layout/fragment_child_c"
     />
 
   <fragment
     android:id="@+id/child_d_fragment"
-    android:name="com.example.navdemo.ChildDFragment"
+    android:name="com.example.navdemo.controller.ChildDFragment"
     android:label="@string/fragment_d_label"
     tools:layout="@layout/fragment_child_d"
     >
