--- a/app/src/main/res/layout/fragment_child_c.xml
+++ b/app/src/main/res/layout/fragment_child_c.xml
@@ -31,4 +31,15 @@
 
   </com.google.android.material.textfield.TextInputLayout>
 
+  <Button
+    android:id="@+id/open_dialog"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/open_dialog_label"
+    android:layout_margin="@dimen/half_dynamic_spacing"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
